--- a/test.css
+++ b/test.css
@@ -1,5 +1,6 @@
 h2,h3,h4 {
 font-family:ABeeZee;
+
 }
 
 div {
@@ -12,4 +13,7 @@ color:white;
 .menuTable{
 text-align:center;
 
+}
+.impText{
+    font-family: Georgia, 'Times New Roman', Times, serif !important;
 }
